--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,10 +42,11 @@
 
             <ImageView
                 android:id="@+id/imageview_cash"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_centerVertical="true"
-                android:layout_toStartOf="@+id/textview_cash"/>
+                android:src="@drawable/ic_coin"
+                android:layout_toStartOf="@+id/textview_cash" />
 
             <TextView
                 android:id="@+id/textview_cash"
