--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,60 +4,67 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:background="@drawable/main_background">
 
-    <LinearLayout
-        android:id="@+id/linearlayout_screentop"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="300dp"
+        android:layout_height="250dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
+        android:text="Covid\nBlast"
+        android:textSize="75sp"
+        android:textStyle="bold|italic"
+        android:gravity="center"
+        android:rotation="333"/>
+
+    <Button
+        android:id="@+id/button_play"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_gravity="center"
+        android:layout_marginTop="25dp"
+        android:text="Play"
+        android:textSize="25sp"
+        android:textColor="@color/black"
+        android:background="@drawable/shape_selector_button_round"
+        android:textAllCaps="false"
+        android:drawableStart="@drawable/ic_play_syringe"
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"/>
 
-        <Button
-            android:id="@+id/button_settings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Settings"
-            android:textAllCaps="false"/>
+    <Button
+        android:id="@+id/button_scoreboard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="25dp"
+        android:text="Scoreboard"
+        android:textSize="25sp"
+        android:textColor="@color/black"
+        android:background="@drawable/shape_selector_button_round"
+        android:textAllCaps="false"
+        android:drawableStart="@drawable/ic_leaderboard"
+        android:drawablePadding="20dp"
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"/>
 
-        <Button
-            android:id="@+id/button_upgrades"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Upgrades"
-            android:textAllCaps="false"/>
-
-        <Button
-            android:id="@+id/button_scoretable"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Score"
-            android:textAllCaps="false"/>
-
-        <RelativeLayout
-            android:id="@+id/relativelayout_cash"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-            <ImageView
-                android:id="@+id/imageview_cash"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_centerVertical="true"
-                android:src="@drawable/ic_coin"
-                android:layout_toStartOf="@+id/textview_cash" />
-
-            <TextView
-                android:id="@+id/textview_cash"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="$$$"
-                android:textSize="25sp"
-                android:layout_centerVertical="true"
-                android:layout_alignParentEnd="true"/>
-        </RelativeLayout>
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/button_settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="25dp"
+        android:text="Settings"
+        android:textSize="25sp"
+        android:textColor="@color/black"
+        android:background="@drawable/shape_selector_button_round"
+        android:textAllCaps="false"
+        android:drawableStart="@drawable/ic_settings"
+        android:drawablePadding="20dp"
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"/>
 
 </LinearLayout>
