--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#969696</color>
+    <color name="red">#FF0000</color>
+    <color name="red_50">#80FF0000</color>
+    <color name="green">#00FF00</color>
+    <color name="green_50">#8000FF00</color>
+    <color name="blue">#0000FF</color>
+    <color name="blue_50">#800000FF</color>
 </resources>
